# contour_finder

./: CMakeLists.txt  README.md  contoursDB.sql
include/: clickable_label.h  contour_detection.h  main_window.h  sql_query_handler.h
src/: clickable_label.cpp  contour_detection.cpp  main_window.cpp  sql_query_handler.cpp
